# quantscope

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/hardware/: generic_edge_npu.yaml
configs/quickstart/: quick.yaml
docs/: DECISIONS.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  PROJECT_SPEC.md  REPORT.md  architecture.md
docs/report/figures/: manifest.json
scripts/: b3_report.py  build_report.py  check_sensitivity_gate.py  check_stress_gate.py  check_stress_gate_v2.py  check_stress_gate_v3.py  check_texture_a_acceptance.py  run_bootstrap_ci.py  run_coeff_sensitivity.py  run_fashionmnist_replication.py  run_hwcost_study.py  run_observer_study.py  run_qat_control.py  run_qat_study.py
src/quantscope/: __init__.py  __main__.py  benchmark.py  cli.py
src/quantscope/analysis/: __init__.py  metrics.py  stress_gate.py
src/quantscope/config/: __init__.py  schemas.py
src/quantscope/data/: __init__.py  synthetic.py  texture10.py
src/quantscope/evaluation/: __init__.py  loop.py
src/quantscope/hardware/: __init__.py  accounting.py  cost.py  profile.py
src/quantscope/models/: __init__.py  bottleneck_resnet.py  tiny_cnn.py
src/quantscope/observers/: __init__.py  base.py  custom.py
src/quantscope/quantization/: __init__.py  affine.py  backend_matched.py  parity.py  ptq.py  qat.py  simulate.py
src/quantscope/regression/: __init__.py  capture.py  compare.py  diff.py  models.py  smoke.py
src/quantscope/reporting/: __init__.py  build.py  figures.py  report_data.py
src/quantscope/search/: __init__.py  analysis.py  exhaustive.py
src/quantscope/sensitivity/: __init__.py  ablation.py
src/quantscope/utilities/: __init__.py  artifacts.py  reproducibility.py
tests/baselines/: smoke.json
tests/integration/: test_ptq_workflow.py
tests/unit/: test_cli.py  test_group_simulation.py  test_impulse_stress.py  test_model_data_training.py  test_search.py  test_texture_benchmark_components.py  test_utilities.py
tests/unit/analysis/: test_metrics.py  test_stress_gate.py
tests/unit/config/: test_schemas.py
tests/unit/hardware/: test_accounting_cost.py  test_profile.py
tests/unit/observers/: test_observers.py
tests/unit/quantization/: test_affine.py  test_backend_matched.py  test_qat.py  test_simulate_with_params.py
tests/unit/regression/: test_regression.py
tests/unit/reporting/: test_report_build.py
