[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantscope"
version = "0.1.0"
description = "Hardware-aware neural-network quantization and numerical debugging"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Akshat Kumbhat" }]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "PyYAML>=6.0",
    "pydantic>=2.5",
    "typer>=0.12",
    "rich>=13.7",
    "torch",
    "torchvision",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
quantscope = "quantscope.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/quantscope"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
