[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantscope"
version = "0.1.0"
description = "Hardware-aware neural-network quantization and numerical debugging"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Akshat Kumbhat" }]
dependencies = [
    # numpy<2: torch 2.2.2 (last release with Intel-macOS wheels) is compiled
    # against NumPy 1.x; tensor<->ndarray interop fails under NumPy 2.
    # See docs/DECISIONS.md ADR-005.
    "numpy>=1.26,<2",
    "pandas>=2.1",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "PyYAML>=6.0",
    "pydantic>=2.5",
    "typer>=0.12",
    "rich>=13.7",
    "torch",
    "torchvision",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    # Pinned to the minor the repo is formatted with (and the
    # pre-commit hook rev): a floating linter breaks CI on rule drift.
    "ruff>=0.15,<0.16",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
quantscope = "quantscope.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/quantscope"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "slow: long-running experiments; excluded from quick CI runs",
    "integration: end-to-end workflow tests",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.isort]
# Explicit: src-based first-party detection proved environment-dependent
# (CI classified quantscope as third-party and flagged I001 in 10 files
# that pass locally with the identical ruff version).
known-first-party = ["quantscope"]

[tool.ruff.lint.per-file-ignores]
# B008: typer declares CLI options via function-call defaults by design.
"src/quantscope/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
files = ["src/quantscope"]

[[tool.mypy.overrides]]
module = ["yaml", "yaml.*", "scipy.*", "torchvision.*"]
ignore_missing_imports = true
